# ecocar_y3_hmi

./: .gitignore  README.md
ecocar-hmi/: IMPLEMENTATION.md  README.md
ecocar-hmi/client/: CMakeLists.txt  qt_setup_guide.md
ecocar-hmi/client/src/: datamodel.cpp  datamodel.h  main.cpp  networkmanager.cpp  networkmanager.h
ecocar-hmi/client/src/qml/: main.qml
ecocar-hmi/client/src/qml/components/: MetricCard.qml  SpeedGauge.qml  StatusBar.qml
test_gpu/: gpuinfo.md  render_test  render_test.c  test  test.c
